# json-benchmarks

arroyo/: Cargo.toml
arroyo/benches/: json_benchmark.rs
arroyo/src/: main.rs
data/logs/: logs.json  logs_pretty.json
data/nexmark/: bids.json  bids_pretty.json  nexmark.json  nexmark_pretty.json
data/tweets/: tweets.json  tweets_pretty.json
flink/: dependency-reduced-pom.xml  pom.xml
flink/src/main/java/dev/arroyo/benchmarks/: FlinkJsonBenchmark.java
